--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -18,7 +18,6 @@
 <tr><td><h3><p><strong>饮食、生活、疾病、中医</strong></p></h3></td></tr><tr><td>
 <h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/31/n12515130.md#1" target="_blank">这些蔬果有苦味别吃 可致中毒！误食3步处理</a><br></h3>
 <h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12520245.md#1" target="_blank">罹癌后存活50年  台大医师：爬山是一帖良药</a><br></h3>
-<h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12520485.md#1" target="_blank">足底筋膜炎4招改善！症状、治疗和复健全图解</a><br></h3>
 <h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521065.md#1" target="_blank">月经迟到、变胖是多囊性卵巢症候群？3方法改善</a><br></h3>
 <h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12522596.md#1" target="_blank">【本周直播】干咳、一动就喘？它比肺癌更棘手</a><br></h3>
 <h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12523054.md#1" target="_blank">按腋下2处 消除肩膀痛 顺便矫正肩胛骨</a><br></h3>
@@ -27,5 +26,6 @@
 <h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525463.md#1" target="_blank">“足部反应区”全图解 按摩双脚提升全身自愈力</a><br></h3>
 <h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526219.md#1" target="_blank">【慧聊养生】先增后减 越补越瘦减肥法</a><br></h3>
 <h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527978.md#1" target="_blank">走路15分钟才有效 抗癌医：做对运动畅通血管</a><br></h3>
+<h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528762.md#1" target="_blank">美国大选心神不宁？1个呼吸减压法解焦虑</a><br></h3>
 <tr><td><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rmxaqt314/djy/blob/master/gb/nsc1002.md#1<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc1002.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rmxaqt314/djy/blob/master/gb/nsc1002.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc1002.htm">https://www.epochtimes.com/gb/nsc1002.htm</a>    （国内需<a href="https://github.com/rmxaqt314/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
