--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,5 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/rmxaqt314/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528587.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/10/TrumpBiden-1200x720-320x200.jpg"><p align="center">共和党参众议员：选举应透明 计算合法选票</p></a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529148.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/20180302-nina-Taipei-101-600x400-320x200.jpg"><p align="center">澳洲大纪元听证会作证 揭中共打压独立媒体</p></a>
+<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529148.md#1" title="澳洲大纪元听证会作证 揭中共打压独立媒体""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/20180302-nina-Taipei-101-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528587.md#1" title="共和党参众议员：选举应透明 计算合法选票""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/TrumpBiden-1200x720-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12518396.md#1" title="【独家】中共派留学生赴美进修地理背后""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1221997703-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527098.md#1" title="【大选更新11.5】川普：不许任何人使选民噤声""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1284134498-320x200.jpg">&nbsp;</a>
@@ -11,21 +12,20 @@
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527603.md#1" title="云南最大商贸城租金暴涨 数万商户罢市抗议""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/4bd9021a9aec8230082bd11e3cbbbc6e-320x200.png">&nbsp;</a>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526625.md#1" title="【专访】两党人士批评美大选民调失准""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1283442236-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526403.md#1" title="分析：中共为何把官员私藏禁书列为首罪""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/20201030054323632-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12526005.md#1" title="确保选举可信 川普在两州提告 要一州重计票""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1282737617-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://rmxaqt314.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528989.md#1">【西岸观察】美国最有争议的两次总统选举</a><br>
-:clock8: <em>17分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529291.md#1">香港美国商会低价卖掉在港办公室</a><br>
-:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529375.md#1">五角大楼驳斥美防长将辞职传闻 “NBC误导”</a><br>
-:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529195.md#1">【拍案惊奇】四州计票仍无果 恶势力反扑川普？</a><br>
-:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529214.md#1">票站观察员：投票时核查身份太松  钻空子易</a><br>
-:clock8: <em>57分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529171.md#1">纽约共和党选民成长 惜无在地力量</a><br>
+:clock8: <em>2分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528852.md#1">田云：美大选欺诈令人震惊 左派为何反川普</a><br>
+:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529571.md#1">美军蓝天使 最后一次以“大黄蜂”战机表演</a><br>
+:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529154.md#1">习近平突换12名驻外大使 暂停6国公民入境</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529458.md#1">主人睡梦中房屋失火 鹦鹉叫醒他逃生</a><br>
+:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528989.md#1">【西岸观察】美国最有争议的两次总统选举</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529291.md#1">香港美国商会低价卖掉在港办公室</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525523.md#1">李克强河南考察时 半空突传凄厉喊冤声</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525522.md#1">蚂蚁中港上市突喊停 业界分析背后恐不简单</a><br>
-<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524572.md#1">蚂蚁被暂停上市 分析指大型集资威胁中共</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524856.md#1">【独家】内部文件解密美国在华“和平队”</a><br>
-<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524549.md#1">美国大选开票 中共控制报导 网民议论纷纷</a><br>
+<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524572.md#1">蚂蚁被暂停上市 分析指大型集资威胁中共</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527001.md#1">中共喉舌罕见批评特斯拉 引关注</a><br>
+<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524549.md#1">美国大选开票 中共控制报导 网民议论纷纷</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526451.md#1">网易严选宣布退出“双十一”购物节活动</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525751.md#1">华为又推新手机 网友：山寨iPhone 12</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526454.md#1">【翻墙必看】美国选民紧盯左派选票欺诈</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,941,107 人
+!共 366,943,972 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
